force-app/main/default/objects/Booking__c/fields/CarType__c.field-meta.xml
<CustomField>
    <fullName>CarType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CarType</label>
    <referenceTo>Car_Type__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>