force-app/main/default/objects/Booking__c/fields/Price_Day__c.field-meta.xml
<CustomField>
    <fullName>Price_Day__c</fullName>
    <formula>CarType__r.Price_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>