force-app/main/default/objects/Booking__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
                <default>true</default>
                <label>Started</label>
            </value>
            <value>
                <fullName>Car Assigned</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Car Delivered</fullName>
            </value>
            <value>
                <fullName>Car Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>