force-app/main/default/objects/Booking__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>CarType__r.Price_Day__c  * ( End_Date__c  -  Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>