force-app/main/default/objects/Booking__c/validationRules/Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Dates</fullName>
    <active>true</active>
    <description>End date cannot be before start date</description>
    <errorConditionFormula>if( End_Date__c  &lt;  Start_Date__c ,true,false)</errorConditionFormula>
    <errorMessage>End date cannot be before start Date</errorMessage>
</ValidationRule>