force-app/main/default/objects/Booking__c/validationRules/NoSameDates.validationRule-meta.xml
<ValidationRule>
    <fullName>NoSameDates</fullName>
    <active>true</active>
    <description>Start and end date cannot be the same</description>
    <errorConditionFormula>if ( End_Date__c  =  Start_Date__c ,true , false)</errorConditionFormula>
    <errorMessage>Start and End date cannot be the same</errorMessage>
</ValidationRule>