force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Car__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>